# simple-aws-website

./: .gitignore  Cargo.toml  README.md  build-scripts  docker-compose.yml  package-lock.json
.github/workflows/: github-actions-demo.yml  post-merge-deploy-workflow.yml  pre-merge-test-and-build-workflow.yml
api_definition/: MessageServerAPI.json  README.md  config.json  package-lock.json  package.json
api_definition_smithy/: hello.sh  smithy-build.json
api_definition_smithy/models/: message.smithy
cloud_formation/: README.md  package-lock.json  package.json  tsconfig.json
cloud_formation/lib/: cloud_formation-stack-props.ts  cloud_formation-stack-util.ts  cloud_formation-stack.ts
cloud_formation/test/: cloud_formation.test.ts
docker/dynamodb/: shared-local-instance.db
docker/lambda/: env.json
lambda/: README.md
lambda-rs/: Cargo.toml  README.md  test-api.sh
lambda-rs/src/: main.rs
lambda/src/: entrypoint.py
lambda/tests/: entrypoint_test.py
local_tools/: reformat_spacing.py
scripts/: make-tables.py
website/: README.md  package-lock.json  package.json  webpack.config.js
website/src/: 404.html  index.html  index.ts
website/src/scripts/: script.js
website/src/scripts/messageApiClient/: apigClient.js
website/test/: index.test.ts
