[workspace]
members = ["lambda-rs", "./.generated-sources/openapi-rs"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
clap = "4.1.1"
tokio = "1.32.0"
backoff = "0.4.0"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
serde = "1.0"
serde_json = "1.0"
lambda_runtime = "0.11.1"
aws_lambda_events = "0.15.0"
http = "1.1.0"
openapi-rs = { version = "0.1.0", path = "./.generated-sources/openapi-rs" }